mysql 연동 및 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-    implementation 'mysql:mysql-connector-java'
-    implementation 'com.p6spy:p6spy:3.9.1'
+    implementation 'mysql:mysql-connector-java:8.0.33' // 버전 번호를 명시
+    implementation('com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6')
 }
 
 tasks.named('test') {
