--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,17 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/realstateapp?useSSL=false&serverTimezone=UTC
-    username: your_username      # MySQL ??? ??
-    password: your_password      # MySQL ????
-    driver-class-name:
+    url: jdbc:mysql://localhost:3306/realstateapp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true  # allowPublicKeyRetrieval ??
+    username: root
+    password: 1502489awdsa!!@
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update           # ?? ??? ?? ?? (create, update, validate, none ? ??)
-    show-sql: true               # ???? SQL ?? ??
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  p6spy:
+    logging:
+      log: com.p6spy.engine.spy.appender.StdoutLogger
