--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/${DB_NAME}?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://localhost:3306/realstateapp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true  # allowPublicKeyRetrieval ??
+    username: root
+    password: 1502489awdsa!!@
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
